--- a/Landing-main/css/footer.css
+++ b/Landing-main/css/footer.css
@@ -7,25 +7,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
     justify-content: space-between;
     margin: 0 -15px;
 }
 
 .footer-social-icons-wrap {
     margin: 0 15px;
+    width: 100%;
 }
 
 .footer-social-icons {
     display: flex;
-    width: 317px;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .footer-social-con__item-link {
     color: rgba(255, 255, 255, 0.5);
-    font-size: 23px;
+    font-size: 1.4375rem;
 }
 
 .footer-copyright {
@@ -33,7 +31,7 @@
     text-transform: capitalize;
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 16px;
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
