--- a/Landing-main/css/header.css
+++ b/Landing-main/css/header.css
@@ -66,7 +66,7 @@
     text-transform: capitalize;
     font-style: normal;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     line-height: 20px;
     color: rgba(255, 255, 255, 0.7);
     padding: 3px;
@@ -81,12 +81,6 @@
 }
 
 @media (max-width: 1024px) {
-    html {
-      font-size: 14px;
-    }
-    .container {
-      max-width: 984px;
-    }
     .header {
         padding: 15px 0 14px;
     }
@@ -96,12 +90,6 @@
   }
 
   @media (max-width: 680px) {
-    html {
-      font-size: 12px;
-    }
-    .container {
-      max-width: 610px;
-    }
     .header {
         padding: 10px 0 9px;
     }
@@ -114,14 +102,7 @@
     }
   }
   
-
   @media (max-width: 360px) {
-    html {
-      font-size: 10px;
-    }
-    .container {
-      max-width: 325px;
-    }
     .header-menu {
         display: none;
     }
@@ -134,12 +115,6 @@
   }
 
 @media (max-width: 320px) {
-  html {
-    font-size: 10px;
-  }
-  .container {
-    max-width: 280px;
-  }
   .header-menu {
       display: none;
   }
