--- a/Landing-main/css/style.css
+++ b/Landing-main/css/style.css
@@ -29,3 +29,39 @@
     z-index: 2;
     position: relative;
 }
+
+@media (max-width: 1024px) {
+    html {
+      font-size: 14px;
+    }
+    .container {
+      max-width: 90%;
+    }
+  }
+
+@media (max-width: 680px) {
+  html {
+    font-size: 13px;
+  }
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 360px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 320px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 90%;
+  }
+}
